[project]
name = "ktch"
version = "0.8.1"
description = "ktch is a python package for model-based morphometrics."
authors = [{ name = "Noshita, Koji", email = "noshita@morphometrics.jp" }]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["morphometrics", "theoretical morphology"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy>=2.0",
  "pandas[pyarrow]>=3.0",
  "scikit-learn>=1.5",
  "scipy>=1.15",
]

[project.optional-dependencies]
data = ["pillow>=9.0", "pooch>=1.3"]
docs = []
plot = ["matplotlib>=3.10", "plotly>=6.0", "seaborn>=0.13.2"]

[project.urls]
Homepage = "https://doc.ktch.dev"
Repository = "https://github.com/noshita/ktch"

[dependency-groups]
dev = [
  "jupyter>=1.1",
  "jupyterlab>=4.3",
  "licensecheck>=2025.1",
  "llvmlite>=0.44",
  "matplotlib>=3.10",
  "networkx>=3.6",
  "numba>=0.61",
  "opencv-python>=4.11",
  "plotly>=6.0",
  "pytest>=8.3",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=6.0",
  "seaborn>=0.13",
  "tqdm>=4.67",
  "tslearn>=0.6.3",
  "vtk>=9.5.2",
  "xarray>=2025.1",
]
doc = [
  "myst-nb>=1.1",
  "numpydoc>=1.8",
  "pooch>=1.3",
  "pydata-sphinx-theme>=0.16",
  "sphinx>=8.1",
  "sphinx-autobuild>=2024.10,<2026.0",
  "sphinx-favicon>=1.0.1",
  "sphinx-gallery>=0.18",
  # NOTE: GitHub version required for SPHINX_MULTIVERSION_NAME env var support
  "sphinx-multiversion @ git+https://github.com/sphinx-contrib/multiversion.git",
  "sphinx-sitemap>=2.6",
  "sphinxcontrib-bibtex>=2.6",
  "sphinxcontrib-mermaid>=2.0",
  "sphinxext-opengraph>=0.13.0",
]

[tool.uv]
default-groups = ["dev", "doc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "**/tests/",
  "doc/",
  "ref/",
  "scripts/",
  "CONTRIBUTING.md",
  ".github/",
  ".gitignore",
  ".release-please-manifest.json",
  "release-please-config.json",
  ".pre-commit-config.yaml",
  "requirements*.txt",
  "uv.lock",
  ".coveragerc",
  ".env",
  ".envrc",
  "CLAUDE.md",
  "AGENTS.md",
  ".claude",
  ".kiro",
  "playground/",
  "coverage.xml",
  ".pytest_artifacts/",
  ".python-version",
  ".benchmarks/",
  ".DS_Store",
]

[tool.hatch.build.targets.wheel]
exclude = ["**/tests/"]

[tool.licensecheck]
fail_licenses = ["GPL-3.0-ONLY", "GNU AGPLV3"]

[tool.pytest.ini_options]
testpaths = ["ktch", "scripts"]

[tool.ruff]
exclude = [
  ".git",
  "__pycache__",
  "dist",
  "doc/_build",
  "doc/notebooks",
  "doc/generated",
]
line-length = 88

[tool.ruff.lint]
ignore = [
  "E203", # space before : (needed for how black formats slicing)
  "E731", # do not assign a lambda expression, use a def
  "E741", # do not use variables named 'l', 'O', or 'I'
  # "F401", # imported but unused — moved to per-file-ignores
  # pydocstyle (D) - incompatible pairs
  "D203", # incompatible with D211 (no blank line before class docstring)
  "D212", # multi-line summary start position; both D212/D213 ignored
  "D213", # to allow mixed styles
  # pydocstyle (D) - docstring style issues
  # TODO: incrementally remove following items as docstrings are improved
  "D100", # undocumented-public-module
  "D102", # undocumented-public-method
  "D103", # undocumented-public-function
  "D104", # undocumented-public-package
  "D200", # unnecessary-multiline-docstring
  "D205", # missing-blank-line-after-summary
  "D400", # missing-trailing-period
  "D401", # non-imperative-mood
  "D403", # first-word-uncapitalized
  "D415", # missing-terminal-punctuation
  "D417", # undocumented-param
]
select = ["E", "F", "W", "I", "D", "NPY201"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"ktch/plot/tests/test_base.py" = ["F401"]
"ktch/harmonic/_disk_harmonic_analysis.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
